--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,6 +14,7 @@ joml = "1.10.8"
 launch4j = "3.0.6"
 graal-native = "0.10.3"
 idea-ext = "1.1.9"
+gles-docs = "0.0.8"
 
 [libraries]
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "androidx-appcompat" }
@@ -31,6 +32,7 @@ junit-jupiter-api = { group = "org.junit.jupiter", name = "junit-jupiter-api", v
 junit-jupiter-engine = { group = "org.junit.jupiter", name = "junit-jupiter-engine", version.ref = "junit" }
 joml = { group = "org.joml", name = "joml", version.ref = "joml" }
 kotlin-test = { group = "org.jetbrains.kotlin", name = "kotlin-test", version.ref = "kotlin" }
+gles-docs = { group = "io.github.dasbabypixel.gamelauncher.docs.gles", name = "gles", version.ref = "gles-docs" }
 
 [plugins]
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
